@@ -11,6 +11,7 @@
 - Fix: Resolve bunch of compilation's warnings.
 - Fix: Segmentation fault on VOB #1128
 - Fix: Hang while processing video #1121
+- Fix: Removed redundant check_configuration_file function
 
 0.88 (2019-05-21)
 -----------------
